--- a/ClaimsApplication/src/main/resources/application.properties
+++ b/ClaimsApplication/src/main/resources/application.properties
@@ -2,8 +2,8 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/claims_app_db?useUnicode=true&characterEncoding=UTF-8
 
 #local
-jdbc.username=claims_app_user
-jdbc.password=claims_app_pass
+jdbc.username=root
+jdbc.password=
 
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
