--- a/ClaimsApplication/src/main/resources/application.properties
+++ b/ClaimsApplication/src/main/resources/application.properties
@@ -5,6 +5,7 @@ jdbc.url=jdbc:mysql://localhost:3306/claims_app_db?useUnicode=true&characterEnco
 jdbc.username=root
 jdbc.password=
 
+server.port=7168
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
